# grafana_observer_tutorial

./: .bandit  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TUTORIAL.md  bump_version.py  docker-compose.yml  explore_metrics.py  generate_release_notes.py  load_test.py  main.py  prometheus.yml  pyproject.toml  start.sh  test_demo.md  update_version.py  version.py
.github/workflows/: ci.yml
grafana/provisioning/dashboards/: application-overview.json  dashboard.yml
grafana/provisioning/datasources/: prometheus.yml
prometheus/: alerts.yml
tests/: test_basic.py
