[project]
name = "observer"
version = "1.0.2"
description = "Observability practice project with FastAPI, Prometheus, and Grafana"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "prometheus-client>=0.22.0",
    "python-dotenv>=1.1.0",
    "aiohttp>=3.12.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "httpx>=0.28.0",
    "bandit>=1.8.0",
    "detect-secrets>=1.5.0",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
